--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "try-next-2",
+  "name": "tutor-alien",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "next": "11.1.0",
+    "nextra": "^1.1.0",
+    "nextra-theme-docs": "^1.2.2",
+    "nextra-theme-mui-docs": "^0.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
