--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "next": "11.1.0",
     "nextra": "^1.1.0",
     "nextra-theme-docs": "^1.2.2",
-    "nextra-theme-mui-docs": "^0.0.8",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
